--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="TestStr.fs" />
     <Compile Include="TestNum.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
