--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="TestObj.fs" />
     <Compile Include="TestWord.fs" />
     <Compile Include="TestSpace.fs" />
     <Compile Include="TestStr.fs" />
