--- a/Test/Test.fsproj
+++ b/Test/Test.fsproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Test.fs" />
+    <Compile Include="TestArr.fs" />
     <Compile Include="TestObj.fs" />
     <Compile Include="TestWord.fs" />
     <Compile Include="TestSpace.fs" />
