--- a/CBON/CBON.fsproj
+++ b/CBON/CBON.fsproj
@@ -11,8 +11,11 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="Cbon.fs" />
+    <Compile Include="Cbon.Parser.fs" />
     <Compile Include="Reader.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="Deserialize.fs" />
+    <Compile Include="Serializer.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
 
