--- a/TestParser/TestParser.fsproj
+++ b/TestParser/TestParser.fsproj
@@ -14,7 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="TestDeserialize.fs" />
     <Compile Include="Test.fs" />
     <Compile Include="TestArr.fs" />
     <Compile Include="TestObj.fs" />
@@ -25,7 +24,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CBON\CBON.fsproj" />
+    <ProjectReference Include="..\CBONParser\CBONParser.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
