--- a/CBON/CBON.csproj
+++ b/CBON/CBON.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>CbStyle.CBON</RootNamespace>
+    <RootNamespace>CbStyles.Cbon</RootNamespace>
     <Authors>CbStyles</Authors>
     <Copyright>CbStyles</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
