--- a/CBON/CBON.csproj
+++ b/CBON/CBON.csproj
@@ -15,15 +15,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CBONParser\CBONParser.fsproj" />
-    <ProjectReference Include="..\CBONSerializer\CBONSerializer.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CbParser" Version="0.3.0" />
+    <PackageReference Include="FSharp.Core" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
