--- a/CBON/CBON.csproj
+++ b/CBON/CBON.csproj
@@ -11,7 +11,8 @@
     <RepositoryUrl>https://github.com/CbStyles/CBON.NET.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/CbStyles/CBON.NET</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
+    <Description>.NET implementation for Common Bracket Object Notation</Description>
   </PropertyGroup>
 
   <ItemGroup>
