--- a/CBONSerializer/CBONSerializer.csproj
+++ b/CBONSerializer/CBONSerializer.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>CbStyles.Cbon</RootNamespace>
     <Authors>CbStyles</Authors>
     <Copyright>CbStyles</Copyright>
     <Company>CbStyles</Company>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CbParser" Version="1.0.0" />
     <ProjectReference Include="..\CBONParser\CBONParser.fsproj" />
   </ItemGroup>
 
