--- a/CBONSerializer/CBONSerializer.csproj
+++ b/CBONSerializer/CBONSerializer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>CbStyles.Cbon</RootNamespace>
     <Authors>CbStyles</Authors>
     <Copyright>CbStyles</Copyright>
