--- a/CBON/CBON.csproj
+++ b/CBON/CBON.csproj
@@ -14,4 +14,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Parser\Parser.cs~RFb7b45bc.TMP" />
+  </ItemGroup>
+
 </Project>
