--- a/CBON/CBON.csproj
+++ b/CBON/CBON.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>CbStyles.Cbon</RootNamespace>
     <Nullable>enable</Nullable>
+    <Version>0.3.0</Version>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/CbStyles/CBON.NET.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/CbStyles/CBON.NET</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <Description>.NET implementation for Common Bracket Object Notation</Description>
+    <Company>CbStyles</Company>
+    <Authors>CbStyles</Authors>
+    <Copyright>CbStyles</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,6 +27,10 @@
 
   <ItemGroup>
     <None Remove="Parser\Parser.cs~RFb7b45bc.TMP" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
