--- a/TestSerializer2/TestSerializer.csproj
+++ b/TestSerializer2/TestSerializer.csproj
@@ -7,13 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-beta.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.0-preview-20210106-01" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CBON\CBON.csproj" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.0-preview-20201123-03" />
   </ItemGroup>
 
 </Project>
